--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "hingismartin.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpeg"
+  avatar           : "profile.png"
   name             : "Hingis Martin Nadar"
   pronouns         : "she/her"  
   bio              : "MS CS at Purdue University, Ex System Engineer at TCS"
