--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "hingismartin.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   name             : "Hingis Martin Nadar"
   pronouns         : "she/her"  
   bio              : "MS CS at Purdue University, Ex System Engineer at TCS"
@@ -51,7 +51,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  instagram        : "hingya_28
+  instagram        : "hingya_28"
   lastfm           : # Username
   linkedin         : "hingis-martin-seeker"
   mastodon         : # URL
