--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ main:
     
     
   - title: "CV"
-    url: /cv/
+    url: /files/Hingis_nadar_systemEng.pdf
     
   # - title: "CV"
   #   url: /cv-json/
